Update code to follow a more solid approach in preperation for dropout relularization implementation

--- a/FloorPlanNet/FloorPlanNet.csproj
+++ b/FloorPlanNet/FloorPlanNet.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\NeuralNet\NeuralNet.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewStruct\" />
+  </ItemGroup>
+
 </Project>
